--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="x9UPbfqqZ4udEMPDEQjnePot6JFwzZUZ9hCcARQYfY0" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Why The Aesthetic Loft Stands Out as the Best Aesthetic Clinic in Islamabad</title>
