--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <h2>Comprehensive Range of Services</h2>
 
-        <p>One of the defining characteristics of The Aesthetic Loft is its extensive array of services tailored to meet diverse patient needs. From non-invasive treatments like chemical peels and microdermabrasion to advanced procedures such as <a href="https://theaestheticloft.com.pk/">laser hair removal</a> and body contouring, the clinic ensures a holistic approach to aesthetic enhancement. This versatility allows patients to address multiple concerns in one location, streamlining their aesthetic journey.</p>
+        <p>One of the defining characteristics of The Aesthetic Loft is its extensive array of services tailored to meet diverse patient needs. From non-invasive treatments like chemical peels and microdermabrasion to advanced procedures such as <a href="https://theaestheticloft.com.pk/laser-hair-removal/">laser hair removal</a> and body contouring, the clinic ensures a holistic approach to aesthetic enhancement. This versatility allows patients to address multiple concerns in one location, streamlining their aesthetic journey.</p>
 
         <h3>Personalized Treatment Plans</h3>
 
